--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,43 +1,21 @@
-name: Deploy Infrastructure to EKS
+name: Create Infra AWS
 
 on:
   push:
     branches:
-      - '**'
-  pull_request:
-    branches:
-      - master
+      - '*'
+
+env:
+  REGION_DEFAULT: us-east-1
 
 jobs:
-  terraform-validate:
+  create_infra:
+    name: terraform
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.0.0
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
-
-  terraform-apply:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: 1.0.0
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -45,13 +23,29 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
+          aws-region: ${{ env.REGION_DEFAULT }}
+
+      - name: Terraform Setup
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
 
       - name: Terraform Init
-        run: terraform init
+        id: init
+        run: terraform init -input=false
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan
+        id: plan
+        run: terraform plan -out=tfplan -no-color -input=false
+        continue-on-error: true
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        id: apply
+        run: terraform apply -input=false -auto-approve
