--- a/.github/workflows/deploy-eks.yml
+++ b/.github/workflows/deploy-eks.yml
@@ -1,4 +1,4 @@
-name: Deploy AWS Academy - EKS
+name: EKS Workflow
 
 on:
   push:
@@ -10,22 +10,39 @@ env:
   CLUSTER_NAME: "EKS-TECH-CHALLENGE"
 
 jobs:
-  deploy:
-    name: Deploy AWS Academy
+  create-cluster::
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: AWS Configure
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.REGION_DEFAULT }}
+        
+      - name: Initialize Terraform
+        run: terraform init
 
-      - name: Update Kube Config
+      - name: Create EKS Cluster
+        run: terraform apply -auto-approve
+
+  update-kubeconfig:
+    runs-on: ubuntu-latest
+    needs: create-cluster  # Este job depende do job anterior
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ env.REGION_DEFAULT }}
+      
+      - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.REGION_DEFAULT }}
 
       - name: Kube Apply
@@ -42,5 +59,5 @@ jobs:
       - name: Deploy Kubernetes Dashboard
         run: |
           kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml
-          kubectl apply -f eks-admin-service-account.yaml
+          kubectl apply -f k8s/eks-admin-service-account.yaml
           kubectl proxy &
