trying deploy eks changes

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -35,5 +35,5 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -var "AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}" -var "AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }}" -var "AWS_SESSION_TOKEN=${{ env.AWS_SESSION_TOKEN }}" -var "AWS_REGION=${{ env.AWS_REGION }}"
 
-      # - name: Terraform Apply
-      #   run: terraform apply --auto-approve
+      - name: Terraform Apply
+        run: terraform apply --auto-approve -var "AWS_ACCESS_KEY_ID=${{ env.AWS_ACCESS_KEY_ID }}" -var "AWS_SECRET_ACCESS_KEY=${{ env.AWS_SECRET_ACCESS_KEY }}" -var "AWS_SESSION_TOKEN=${{ env.AWS_SESSION_TOKEN }}" -var "AWS_REGION=${{ env.AWS_REGION }}"
