--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -37,6 +37,7 @@ jobs:
 
   terraform-apply:
     runs-on: ubuntu-latest
+    needs: terraform-plan
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
