--- a/.github/workflows/deploy-eks.yml
+++ b/.github/workflows/deploy-eks.yml
@@ -39,8 +39,8 @@ jobs:
           chmod +x ./kubectl
           sudo mv ./kubectl /usr/local/bin/kubectl
 
-      # - name: Deploy Kubernetes Dashboard
-      #   run: |
-      #     kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml
-      #     kubectl apply -f k8s/eks-admin-service-account.yaml
-      #     kubectl proxy &
+      - name: Deploy Kubernetes Dashboard
+        run: |
+          kubectl apply -f https://raw.githubusercontent.com/kubernetes/dashboard/v2.7.0/aio/deploy/recommended.yaml
+          kubectl apply -f k8s/eks-admin-service-account.yaml
+          kubectl proxy &
