--- a/k8s/eks-deployment.yaml
+++ b/k8s/eks-deployment.yaml
@@ -26,7 +26,33 @@ spec:
                 - arm64
       containers:
       - name: fastfood-api
-        image: 064151784429.dkr.ecr.us-east-1.amazonaws.com/fastfood-api:ef74f8c221d546d17c7e9470b128b196516c7741
+        image: 064151784429.dkr.ecr.us-east-1.amazonaws.com/fastfood-api:2ff176d86564e7201a878fe0b53f5446a2303529
+        env:
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: database-config
+              key: DB_HOST
+        - name: DB_PORT
+          valueFrom:
+            configMapKeyRef:
+              name: database-config
+              key: DB_PORT
+        - name: DB_NAME
+          valueFrom:
+            configMapKeyRef:
+              name: database-config
+              key: DB_NAME
+        - name: DB_USER
+          valueFrom:
+            configMapKeyRef:
+              name: database-config
+              key: DB_USER
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: database-secret
+              key: DB_PASSWORD
         resources:
             requests:
               cpu: 256m
